# lean-dl-example

./: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.dstack/: dev.dstack.yml  service.dstack.yml  train-monitor.dstack.yml  train.dstack.yml  workflows.yaml
.dstack/workflows/: conda.yaml
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
app/: main.py
config/: config.yaml  datamodule.yaml  lightning.yaml  pl.yaml  transform.yaml
config/optuna/: batch_size.yaml  tune.yaml
dl/: __init__.py  datamodule.py  prepare_data.py  train.py
test/: conftest.py  test_datamodule.py  test_prepare_data.py  test_train.py
