[tool.poetry]
name = "dl"
version = "0.3.0"
description = "Example of a lean deep learning project with a config-driven approach."
authors = ["kengz <kengzwl@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.setuptools]
packages = ["dl"]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
feature-transform = "^0.4.1"
gunicorn = "^21.2.0"
hydra-core = "^1.3.2"
hydra-optuna-sweeper = "^1.2.0"
onnx = "^1.15.0"
onnxruntime = "^1.17.0"
pytorch-lightning = "^2.1.3"
tensorboard = "^2.15.1"
torch = [
  {version = "^2.1.0+cpu", source = "pytorch-cpu", markers = "sys_platform == 'linux'"},
  {version = "^2.1.0", source = "PyPI", markers = "sys_platform == 'darwin'"}
]
torcharc = "^1.2.1"
torchmetrics = "^1.2.1"
uvicorn = "^0.27.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest-cov = "^4.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--cov=dl",
    "--cov-report=html",
    "--cov-report=term",
]
filterwarnings = "ignore"

[tool.coverage.report]
include_namespace_packages = true
