[project]
name = "dl"
version = "1.0.0"
description = "Example of a lean deep learning project with a config-driven approach."
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "feature-transform>=1.0.1",
  "hydra-core>=1.3.2",
  "hydra-optuna-sweeper>=1.2.0",
  "numpy==1.26.4",
  "onnx>=1.17.0",
  "pytorch-lightning>=2.4.0",
  "scikit-learn>=1.2.0",
  "tensorboard>=2.18.0",
  "torch>=2.5.1",
  "torcharc>=2.1.2",
  "torchmetrics>=1.6.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'"},
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.3",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=dl",
    "--cov-report=html",
    "--cov-report=term",
]
filterwarnings = "ignore"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
